--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,7 @@
     width: 100%;
     height: 165px;
     border-top: 2px solid red;
+    border-radius: 10px 10px 0 0;
     background-color: white;
 }
 
